--- a/src/main/resources/org/glass/velocity/history.vm
+++ b/src/main/resources/org/glass/velocity/history.vm
@@ -24,7 +24,7 @@
                         <tr>
                             <td>$log.type</td>
                             <td>$!format.date(${log.date})</td>
-                            <td><a href="/jobs/$format.html($log.jobGroup)/$format.html($log.jobName)">$format.html($log.jobGroup) / $format.html($log.jobName)</a></td>
+                            <td><a href="$root/jobs/$format.html($log.jobGroup)/$format.html($log.jobName)">$format.html($log.jobGroup) / $format.html($log.jobName)</a></td>
                             <td>$!format.html($log.triggerGroup) / $format.html($log.triggerName)</td>
                             <td>$!log.jobClass</td>
                         </tr>
