--- a/src/main/resources/org/glass/velocity/job.vm
+++ b/src/main/resources/org/glass/velocity/job.vm
@@ -9,10 +9,10 @@
 		
 		<h1><span>Job</span></h1>
         <div class="actions">
-            <a href="/jobs/$format.html($job.group)/$format.html($job.name)/edit">edit</a>
-            <a href="/jobs/$format.html($job.group)/$format.html($job.name)/fire">fire now</a>
-            <a href="/history?job=${job.jobClass.simpleName}">history</a>
-            <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="/jobs/$format.html($job.group)/$format.html($job.name)/delete">delete</a>
+            <a href="$root/jobs/$format.html($job.group)/$format.html($job.name)/edit">edit</a>
+            <a href="$root/jobs/$format.html($job.group)/$format.html($job.name)/fire">fire now</a>
+            <a href="$root/history?job=${job.jobClass.simpleName}">history</a>
+            <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="$root/jobs/$format.html($job.group)/$format.html($job.name)/delete">delete</a>
         </div>
         <div class="table">
             <table>
@@ -47,8 +47,8 @@
 
 		<h2><span>Defined triggers</span></h2>
         <div class="actions">
-            <a href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/new-cron">add cron</a>
-            <a href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/new-simple">add simple</a>
+            <a href="$root/jobs/$format.html($job.group)/$format.html($job.name)/triggers/new-cron">add cron</a>
+            <a href="$root/jobs/$format.html($job.group)/$format.html($job.name)/triggers/new-simple">add simple</a>
         </div>
         <div class="table">
             <table>
@@ -68,7 +68,7 @@
                     #foreach ($trigger in $triggers)
                         <tr>
                             <td style="text-align: center;">$format.html($trigger.type)</td>
-                            <td><a href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/$format.html($trigger.group)/$format.html($trigger.name)/edit">$format.html($trigger.group) / $format.html($trigger.name)</a></td>
+                            <td><a href="$root/jobs/$format.html($job.group)/$format.html($job.name)/triggers/$format.html($trigger.group)/$format.html($trigger.name)/edit">$format.html($trigger.group) / $format.html($trigger.name)</a></td>
                             <td style="text-align: center;">
                                 $format.date($trigger.startTime)
                                 #if ($trigger.running) &nbsp;<span style="color: red;">running</span> #end
@@ -78,8 +78,8 @@
                             <td style="text-align: center;">$format.date($trigger.nextFireTime)</td>
                             <td style="text-align: center;">${trigger.planification}</td>
                             <td style="text-align: center;">
-                                <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/$format.html($trigger.group)/$format.html($trigger.name)/delete">
-                                    <img alt="delete" src="/image/delete.png" />
+                                <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="$root/jobs/$format.html($job.group)/$format.html($job.name)/triggers/$format.html($trigger.group)/$format.html($trigger.name)/delete">
+                                    <img alt="delete" src="$root/image/delete.png" />
                                 </a>
                             </td>
                         </tr>
