--- a/src/main/resources/org/glass/velocity/jobs.vm
+++ b/src/main/resources/org/glass/velocity/jobs.vm
@@ -20,11 +20,11 @@
                 <tbody>
                     #foreach ($job in $jobs)
                         <tr>
-                            <td><a href="/jobs/$format.html($job.group)/$format.html($job.name)">$format.html($job.group) / $format.html($job.name)</a></td>
+                            <td><a href="$root/jobs/$format.html($job.group)/$format.html($job.name)">$format.html($job.group) / $format.html($job.name)</a></td>
                             <td>${job.jobClass.name}</td>
                             <td style="text-align: center;">
-                                <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="/jobs/$format.html($job.group)/$format.html($job.name)/delete">
-                                    <img alt="delete" src="/image/delete.png" />
+                                <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="$root/jobs/$format.html($job.group)/$format.html($job.name)/delete">
+                                    <img alt="delete" src="$root/image/delete.png" />
                                 </a>
                             </td>
                         </tr>
