--- a/src/main/resources/org/glass/velocity/triggers.vm
+++ b/src/main/resources/org/glass/velocity/triggers.vm
@@ -29,7 +29,7 @@
                         #foreach ($trigger in $jobAndTriggers.triggers)
                             <tr>
                                 <td style="text-align: center;">$format.html($trigger.type)</td>
-                                <td><a href="/jobs/$format.html($job.group)/$format.html($job.name)">$format.html($job.group) / $format.html($job.name)</a></td>
+                                <td><a href="$root/jobs/$format.html($job.group)/$format.html($job.name)">$format.html($job.group) / $format.html($job.name)</a></td>
                                 <td>$format.html($trigger.group) / $format.html($trigger.name)</td>
                                 <td style="text-align: center;">
                                     $format.date($trigger.startTime)
@@ -40,8 +40,8 @@
                                 <td style="text-align: center;">$format.date($trigger.nextFireTime)</td>
                                 <td style="text-align: center;">$format.html($trigger.planification)</td>
                                 <td style="text-align: center;">
-                                    <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="/jobs/$format.html($job.group)/$format.html($job.name)/triggers/$format.html($trigger.group)/$format.html($trigger.name)/delete">
-                                        <img alt="delete" src="/image/delete.png" />
+                                    <a onclick="javascript:return(confirm('Are you sure you want to delete ?'));" href="$root/jobs/$format.html($job.group)/$format.html($job.name)/triggers/$format.html($trigger.group)/$format.html($trigger.name)/delete">
+                                        <img alt="delete" src="$root/image/delete.png" />
                                     </a>
                                 </td>
                             </tr>
