--- a/src/main/resources/org/glass/velocity/new_cron_trigger_form.vm
+++ b/src/main/resources/org/glass/velocity/new_cron_trigger_form.vm
@@ -24,7 +24,7 @@
                         <td>group :</td>
                         <td>
                             <input type="text" name="triggerGroup" value="$!format.html($status.value)" />
-                            #if(${status.error}) ${status.errorMessage} #end
+                            #if(${status.error}) <span class="error">${status.errorMessage}</span> #end
                         </td>
                     </tr>
                     #springBind("form.triggerName")
@@ -32,7 +32,7 @@
                         <td>name :</td>
                         <td>
                             <input type="text" name="triggerName" value="$!format.html($status.value)" />
-                            #if(${status.error}) ${status.errorMessage} #end
+                            #if(${status.error}) <span class="error">${status.errorMessage}</span> #end
                         </td>
                     </tr>
                     #springBind("form.startTime")
@@ -41,7 +41,7 @@
                         <td>
                             <input type="text" name="startTime" value="$!format.html($status.value)" />
                             &nbsp;leave blank to start now
-                            #if(${status.error}) ${status.errorMessage} #end
+                            #if(${status.error}) <span class="error">${status.errorMessage}</span> #end
                         </td>
                     </tr>
                     #springBind("form.endTime")
@@ -49,7 +49,7 @@
                         <td>end time ($format.datePattern()) :</td>
                         <td>
                             <input type="text" name="endTime" value="$!format.html($status.value)" />
-                            #if(${status.error}) ${status.errorMessage} #end
+                            #if(${status.error}) <span class="error">${status.errorMessage}</span> #end
                         </td>
                     </tr>
                     #springBind("form.cronExpression")
@@ -58,7 +58,7 @@
                         <td>
                             <input type="text" name="cronExpression" value="$!format.html($status.value)" />
                             &nbsp;<a href="#cron-documentation">documentation</a>
-                            #if(${status.error}) ${status.errorMessage} #end
+                            #if(${status.error}) <span class="error">${status.errorMessage}</span> #end
                         </td>
                     </tr>
                     #springBind("form.dataMap")
