org/glass/velocity/new_job_form.vm [line 38, column 51] : Right side ($form.clazz) of '==' operation has null value

--- a/src/main/resources/org/glass/velocity/new_job_form.vm
+++ b/src/main/resources/org/glass/velocity/new_job_form.vm
@@ -36,7 +36,7 @@
                             <select id="clazz" name="clazz" onchange="javascript:onJobSelected();">
                                 <option label="------------------------------" value="" />
                                 #foreach ($value in $jobClasses)
-                                    #if ($value == $status.value)
+                                    #if ("$value" == "$status.value")
                                         <option label="$value.name" value="$value.name" selected="selected" />
                                     #else
                                         <option label="$value.name" value="$value.name" />
