--- a/src/main/resources/org/glass/velocity/logs.vm
+++ b/src/main/resources/org/glass/velocity/logs.vm
@@ -29,7 +29,9 @@
                         <tr>
                             <td colspan="3">
                                 #if ($utils.isNotEmpty($log.stackTrace))
-                                     <pre>$format.html($log.stackTrace)</pre>
+                                    <span class="code">$format.html($log.rootCause)</span>
+                                    <br/><br/>
+                                    <span class="code">$format.stacktrace($log.stackTrace)</span>
                                 #end
                             </td>
                         </tr>
