--- a/src/main/resources/org/glass/velocity/job.vm
+++ b/src/main/resources/org/glass/velocity/job.vm
@@ -36,7 +36,7 @@
                     <tr>
                         <td>Data map</td>
                         <td>
-                            <span class="code">$format.html($dataMap)</span>
+                            <span class="code">$format.dataMap($dataMap)</span>
                         </td>
                     </tr>
                 </tbody>
@@ -85,7 +85,7 @@
                         </tr>
                         <tr>
                             <td colspan="8">
-                                <span class="code">$!esc.hmtl($trigger.dataMap)</span>
+                                <span class="code">$!format.dataMap($trigger.dataMap)</span>
                             </td>
                         </tr>
                     #end
