link history and logs

--- a/src/main/resources/org/glass/velocity/history.vm
+++ b/src/main/resources/org/glass/velocity/history.vm
@@ -14,11 +14,13 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Start</th>
-                        <th>End</th>
+                        <th>Execution id</th>
                         <th>Job group / name</th>
                         <th>Trigger group / name</th>
+                        <th>Start</th>
+                        <th>End</th>
                         <th>Job class</th>
+                        <th>Logs</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -28,6 +30,9 @@
                         #else
                             <tr>
                         #end
+                            <td style="text-align: center;">${log.id}</td>
+                            <td><a href="$root/jobs/$format.html($log.jobGroup)/$format.html($log.jobName)">$format.html($log.jobGroup) / $format.html($log.jobName)</a></td>
+                            <td>$!format.html($log.triggerGroup) / $!format.html($log.triggerName)</td>
                             <td style="text-align: center;">$!format.date(${log.startDate})</td>
                             <td style="text-align: center;">
                                 #if ($log.ended)
@@ -39,12 +44,11 @@
                                     <span style="color: red;">running</span>
                                 #end
                             </td>
-                            <td><a href="$root/jobs/$format.html($log.jobGroup)/$format.html($log.jobName)">$format.html($log.jobGroup) / $format.html($log.jobName)</a></td>
-                            <td>$!format.html($log.triggerGroup) / $format.html($log.triggerName)</td>
                             <td>$!log.jobClass</td>
+                            <td><a href="$root/logs/$log.id">logs</a></td>
                         </tr>
                         <tr>
-                            <td colspan="5">
+                            <td colspan="7">
                                 <span class="code">$format.dataMap($log.dataMap)</span>
                             </td>
                         </tr>
